# cake-sample-subprojlib-cake-find-package

./: CMakeLists.txt  LICENSE  README.md  subprojlib-config.cmake.in  subprojlib.c
include/: subprojlib.h
